--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,8 @@ ul li b {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3rem 10%;
+  padding: 1rem 10%;
+  background-color: #2c2306;
 }
 
 #main-header #title {
@@ -32,16 +33,33 @@ ul li b {
 }
 
 #main-header #title img {
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
   object-fit: contain;
   border-radius: 50%;
   border: 2px solid #ffc404;
 }
 
+.header-logo {
+  width: 2rem; /* Määrake logo laius */
+  height: 2rem; /* Määrake logo kõrgus */
+  object-fit: contain; /* Säilitab logo proportsioonid */
+  border-radius: 50%; /* Muudab logo ümaraks */
+  border: 2px solid #ffc404; /* Lisab äärise */
+}
+
 #main-header button {
   font-size: 1.5rem;
   font-family: 'Lato', sans-serif;
+}
+
+#main-header .cart-button {
+  font-size: 1rem;
+  color: #ffc404;
+  background: none;
+  border: 4px solid red;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 h1 {
